--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1198,6 +1198,24 @@ ul.social-network li a {
   width: 35px;
 }
 
+.login-button {
+  background-color: #65aaf0;
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 15px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  width: 150px;
+}
+
+.login-button:hover {opacity: 1}
+
 .body-index {
   padding: 50px;
   background:#65AAF0;
