--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1375,3 +1375,20 @@ ul.social-network li a {
   width: 80px;
   padding-left: 80px;
 }
+
+.to-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #000;
+  color: #fff;
+  padding: 9px 12px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.to-top:hover {
+  background: #d7d7d7;
+  color: #000;
+}
